# airflow-workshop

./: .gitignore  pyproject.toml
dags/: dag_qualidade.py  minha_dag.py
